--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,17 @@
 body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
   text-align: center;
 }
 .header {
   text-align: center;
 }
 .container {
-  margin-top: 50px;
+  margin-top: 150px;
   display: flex;
-  padding-left: 100px;
+  margin-left: 100px;
 }
 .image {
-  max-width: 100%;
   display: block;
   margin: 0 auto;
-  transition: opacity 0.5s ease-in-out;
   display: none;
   padding-left: 100px;
 }
@@ -24,11 +19,10 @@ body {
 .show-button {
   margin-top: 10px;
   padding: 5px 10px;
-  font-size: 14px;
   cursor: pointer;
-  border: none;
   align-items: center;
 }
 .hide-button {
   display: none;
+  margin-left: 100px;
 }
